@@ -1,32 +1,26 @@
 package umc.exs.controller.api.interaction;
 
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
-import java.time.LocalDateTime;
-
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.lang.NonNull;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PatchMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
-import umc.exs.model.enums.StatusPost;
 
 import lombok.RequiredArgsConstructor;
 import umc.exs.model.entidades.social.ComentarioBlog;
 import umc.exs.model.entidades.social.PostBlog;
+import umc.exs.model.enums.StatusPost;
+import umc.exs.model.entidades.usuario.Cliente;
 import umc.exs.repository.logic.AdminRepository;
 import umc.exs.repository.usuario.ClienteRepository;
 import umc.exs.service.core.interactions.PostBlogService;
@@ -42,19 +36,29 @@ public class BlogController {
 
     private static final DateTimeFormatter FMT = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
 
+    // Constantes para evitar duplicação de literais (Code Smell)
+    private static final String AUTOR_NOME = "autorNome";
+    private static final String CONTEUDO = "conteudo";
+    private static final String MENSAGEM = "mensagem";
+    private static final String STATUS = "status";
+    private static final String DATA_AGENDADA = "dataPublicacaoAgendada";
+    private static final String ERRO = "erro";
+
     @GetMapping
     public ResponseEntity<List<Map<String, Object>>> listarPosts(
             @RequestParam(required = false) StatusPost status) {
         List<PostBlog> lista = (status != null)
                 ? postBlogService.listarPorStatus(status)
                 : postBlogService.listarPublicados();
-        return ResponseEntity.ok(lista.stream().map(this::toMap).collect(Collectors.toList()));
+
+        // Uso de .toList() para Java 16+
+        return ResponseEntity.ok(lista.stream().map(this::toMap).toList());
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<?> buscarPost(@PathVariable Long id) {
+    public ResponseEntity<Map<String, Object>> buscarPost(@PathVariable Long id) {
         return postBlogService.buscarPorId(id)
-                .<ResponseEntity<?>>map(p -> ResponseEntity.ok(toMap(p)))
+                .map(p -> ResponseEntity.ok(toMap(p)))
                 .orElse(ResponseEntity.notFound().build());
     }
 
@@ -63,45 +67,48 @@ public class BlogController {
         List<Map<String, Object>> comentarios = postBlogService.listarComentarios(postId).stream()
                 .map(c -> Map.<String, Object>of(
                         "id", c.getId(),
-                        "autorNome", c.getAutorNome() != null ? c.getAutorNome() : "Anônimo",
-                        "conteudo", c.getConteudo(),
+                        AUTOR_NOME, c.getAutorNome() != null ? c.getAutorNome() : "Anônimo",
+                        CONTEUDO, c.getConteudo(),
                         "dataCriacao", c.getDataCriacao().format(FMT)))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(comentarios);
     }
 
     @PostMapping("/{postId}/curtir")
-    public ResponseEntity<?> curtirPost(@PathVariable Long postId) {
+    public ResponseEntity<Map<String, Integer>> curtirPost(@PathVariable Long postId) {
         int curtidas = postBlogService.curtirPost(postId);
         return ResponseEntity.ok(Map.of("curtidas", curtidas));
     }
 
     @PostMapping("/{postId}/comentarios")
-    public ResponseEntity<?> comentar(
+    public ResponseEntity<Map<String, Object>> comentar(
             @PathVariable Long postId,
             @RequestBody Map<String, String> body,
             @AuthenticationPrincipal UserDetails user) {
 
-        String conteudo = body.get("conteudo");
-        if (conteudo == null || conteudo.isBlank())
-            return ResponseEntity.badRequest().body(Map.of("erro", "Conteúdo não pode ser vazio."));
+        String conteudoInput = body.get(CONTEUDO);
+        if (conteudoInput == null || conteudoInput.isBlank()) {
+            return ResponseEntity.badRequest().body(Map.of(ERRO, "Conteúdo não pode ser vazio."));
+        }
 
+        // Uso de Method Reference 'Cliente::getNome'
         String autorNome = clienteRepository.findByEmail(user.getUsername())
-                .map(c -> c.getNome())
+                .map(Cliente::getNome)
                 .orElse(user.getUsername());
 
-        ComentarioBlog comentario = postBlogService.comentar(postId, autorNome, conteudo);
-        return ResponseEntity.ok(Map.<String, Object>of(
-                "id", comentario.getId(),
-                "autorNome", comentario.getAutorNome(),
-                "conteudo", comentario.getConteudo(),
+        ComentarioBlog comentario = postBlogService.comentar(postId, autorNome, conteudoInput);
+
+        return ResponseEntity.ok(Map.of(
+                "id", Objects.requireNonNull(comentario.getId()),
+                AUTOR_NOME, comentario.getAutorNome(),
+                CONTEUDO, comentario.getConteudo(),
                 "dataCriacao", comentario.getDataCriacao().format(FMT)));
     }
 
     @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<?> criarPost(
+    public ResponseEntity<Map<String, Object>> criarPost(
             @RequestParam("titulo") String titulo,
-            @RequestParam("conteudo") String conteudo,
+            @RequestParam(CONTEUDO) String conteudo,
             @RequestParam(value = "imagem", required = false) MultipartFile imagem,
             @AuthenticationPrincipal UserDetails userDetails) {
 
@@ -111,49 +118,58 @@ public class BlogController {
 
         try {
             PostBlog post = postBlogService.criarPost(titulo, conteudo, autorNome, imagem);
-            return ResponseEntity.ok(Map.of("id", post.getId(), "mensagem", "Post publicado com sucesso."));
+            return ResponseEntity.ok(Map.of(
+                    "id", Objects.requireNonNull(post.getId()),
+                    MENSAGEM, "Post publicado com sucesso."));
         } catch (IOException e) {
-            return ResponseEntity.internalServerError().body(Map.of("erro", "Falha ao salvar imagem."));
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of(ERRO, "Falha ao salvar imagem."));
         }
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> deletarPost(@PathVariable Long id) {
+    public ResponseEntity<Map<String, String>> deletarPost(@PathVariable Long id) {
         postBlogService.deletarPost(id);
-        return ResponseEntity.ok(Map.of("mensagem", "Post removido."));
+        return ResponseEntity.ok(Map.of(MENSAGEM, "Post removido."));
     }
 
     @PatchMapping("/{id}/submeter")
-    public ResponseEntity<?> submeterParaRevisao(@PathVariable Long id) {
+    public ResponseEntity<Map<String, Object>> submeterParaRevisao(@PathVariable @NonNull Long id) {
         try {
             PostBlog post = postBlogService.submeterParaRevisao(id);
-            return ResponseEntity.ok(Map.of("mensagem", "Post submetido para revisão.", "status", post.getStatus()));
+            return ResponseEntity.ok(Map.of(
+                    MENSAGEM, "Post submetido para revisão.",
+                    STATUS, post.getStatus()));
         } catch (IllegalStateException e) {
-            return ResponseEntity.badRequest().body(Map.of("erro", e.getMessage()));
+            return ResponseEntity.badRequest().body(Map.of(ERRO, e.getMessage()));
         }
     }
 
     @PatchMapping("/{id}/publicar")
-    public ResponseEntity<?> publicar(@PathVariable Long id) {
+    public ResponseEntity<Map<String, Object>> publicar(@PathVariable @NonNull Long id) {
         PostBlog post = postBlogService.publicar(id);
-        return ResponseEntity.ok(Map.of("mensagem", "Post publicado.", "status", post.getStatus()));
+        return ResponseEntity.ok(Map.of(
+                MENSAGEM, "Post publicado.",
+                STATUS, Objects.requireNonNull(post.getStatus())));
     }
 
     @PatchMapping("/{id}/agendar")
-    public ResponseEntity<?> agendar(
-            @PathVariable Long id,
+    public ResponseEntity<Map<String, Object>> agendar(
+            @PathVariable @NonNull Long id,
             @RequestBody Map<String, String> body) {
-        String dataStr = body.get("dataPublicacaoAgendada");
+        String dataStr = body.get(DATA_AGENDADA);
         if (dataStr == null || dataStr.isBlank()) {
-            return ResponseEntity.badRequest().body(Map.of("erro", "dataPublicacaoAgendada é obrigatório."));
+            return ResponseEntity.badRequest().body(Map.of(ERRO, DATA_AGENDADA + " é obrigatório."));
         }
         try {
             LocalDateTime data = LocalDateTime.parse(dataStr);
             PostBlog post = postBlogService.agendar(id, data);
-            return ResponseEntity.ok(Map.of("mensagem", "Post agendado.", "status", post.getStatus(),
-                    "dataPublicacaoAgendada", data.toString()));
+            return ResponseEntity.ok(Map.of(
+                    MENSAGEM, "Post agendado.",
+                    STATUS, Objects.requireNonNull(post.getStatus()),
+                    DATA_AGENDADA, data.toString()));
         } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(Map.of("erro", e.getMessage()));
+            return ResponseEntity.badRequest().body(Map.of(ERRO, e.getMessage()));
         }
     }
 
@@ -161,14 +177,14 @@ public class BlogController {
         java.util.LinkedHashMap<String, Object> map = new java.util.LinkedHashMap<>();
         map.put("id", p.getId());
         map.put("titulo", p.getTitulo() != null ? p.getTitulo() : "");
-        map.put("conteudo", p.getConteudo() != null ? p.getConteudo() : "");
+        map.put(CONTEUDO, p.getConteudo() != null ? p.getConteudo() : "");
         map.put("imagemUrl", p.getImagemUrl() != null ? p.getImagemUrl() : "");
-        map.put("autorNome", p.getAutorNome() != null ? p.getAutorNome() : "Administrador");
+        map.put(AUTOR_NOME, p.getAutorNome() != null ? p.getAutorNome() : "Administrador");
         map.put("dataPublicacao", p.getDataPublicacao().format(FMT));
         map.put("curtidas", p.getCurtidas());
-        map.put("status", p.getStatus() != null ? p.getStatus().name() : "PUBLICADO");
+        map.put(STATUS, p.getStatus() != null ? p.getStatus().name() : "PUBLICADO");
         if (p.getDataPublicacaoAgendada() != null) {
-            map.put("dataPublicacaoAgendada", p.getDataPublicacaoAgendada().format(FMT));
+            map.put(DATA_AGENDADA, p.getDataPublicacaoAgendada().format(FMT));
         }
         return map;
     }
